replaced reservedtojudge with reserveto SSCS-11395